fixed tooltip that was cutting off at the edge of the page

--- a/src/rpb/table_picker.scss
+++ b/src/rpb/table_picker.scss
@@ -81,7 +81,7 @@
     border: none; 
     
     @media (min-width: 1200px) { 
-      width: 600px;
+      width: 550px;
     }
     @media (min-width: 900px) and (max-width: 1200px) { 
       width: 70vw;
